Setup Auth verification

--- a/PetPals/src/app/auth/auth.component.html
+++ b/PetPals/src/app/auth/auth.component.html
@@ -18,7 +18,7 @@
         <div class="row">
           <div class="col-10 offset-1">
             <div class="form-group">
-              <label for="password">Password(test123)</label>
+              <label for="password">Password(Test123)</label>
               <input type="password" id="password" class="form-control" ngModel name="password"  />
             </div>
           </div>
