Add Logout functionality

--- a/PetPals/src/app/auth/auth.component.html
+++ b/PetPals/src/app/auth/auth.component.html
@@ -9,7 +9,10 @@
         <div class="row">
           <div class="col-10 offset-1">
             <div class="form-group">
-              <label for="userName">Username (AliBaba99) </label>
+              <label for="userName">Username (Adam) </label> <br>
+              <label for="userName">Username (Bertil) </label> <br>
+              <label for="userName">Username (Caesar) </label> <br>
+              <label for="userName">Username (David) </label> <br>
               <input type="username" id="userName" class="form-control" ngModel name="userName"  />
             </div>  
           </div>
