--- a/PetPals/src/app/home/home.component.html
+++ b/PetPals/src/app/home/home.component.html
@@ -1,1 +1,17 @@
-<p>home works!</p>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-6 pl-4">
+        Welcome {{ signalrService.userData?.name }}
+      </div>
+      <div class="col-6 text-right" style="cursor: pointer;" (click)="logOut()">
+        <!-- <a routerLink="animals"> -->
+            <button class="btn-close-white" > Logga Ut </button>
+        <!-- </a>  -->
+      </div>
+    </div>
+  
+    <br>
+    <ul class="list-group" *ngFor="let user of users">
+      <li class="list-group-item">{{ user.name }}</li>
+    </ul>
+  </div>
