--- a/PetPals/src/app/auth/auth.component.html
+++ b/PetPals/src/app/auth/auth.component.html
@@ -29,7 +29,7 @@
   
         <div class="row" style="margin-bottom: 10px;"> 
           <div class="col-1 offset-1">
-            <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">Login</button>
+            <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">Logga In</button>
           </div>
         </div>
       </form>
