--- a/PetPals/src/app/home/home.component.html
+++ b/PetPals/src/app/home/home.component.html
@@ -1,7 +1,10 @@
 <div class="container-fluid">
     <div class="row">
       <div class="col-6 pl-4">
-        Welcome {{ signalrService.userData?.name }}
+        Inloggad som 
+        <b>
+          {{ signalrService.userData?.name }}
+        </b> 
       </div>
       <div class="col-6 text-right" style="cursor: pointer;" (click)="logOut()">
         <!-- <a routerLink="animals"> -->
@@ -15,3 +18,37 @@
       <li class="list-group-item">{{ user.name }}</li>
     </ul>
   </div>
+
+
+  <!-- 5Tutorial  -->
+  <div class="row">
+    <!-- List of Users -->
+    <div class="col-12 col-sm-3 offset-sm-3 mt-4">
+      <!-- Online Users -->
+      <label>Online Users</label>
+      <ul class="list-group" *ngFor="let user of users">
+        <li class="list-group-item" style="cursor: pointer;" 
+        (click)="messageRecipient = user">{{ user.name }}</li>
+      </ul>
+    </div>
+
+    <!-- Chat Box -->
+    <div class="col-12 col-sm-3 mt-4">
+      <label><b>{{ messageRecipient.name }}</b></label>
+      <div id="chatBox">
+        <div #msgBox id="msgBox" [scrollTop]="msgBox.scrollHeight">
+          <div
+            *ngFor="let message of messageRecipient?.messages"
+            class="msg"
+            [class.mine]="message.fromMe"
+            >
+            {{ message.content }}
+          </div>
+        </div>
+        <textarea [(ngModel)]="message" id="textarea"></textarea>
+        <button id="sendBtn" class="btn btn-primary" [disabled]="messageRecipient == null" (click)="sendMessageInvoke()">Send</button>
+      </div>
+    </div>
+  </div>
+
+
