--- a/PetPals/src/app/home/home.component.html
+++ b/PetPals/src/app/home/home.component.html
@@ -4,9 +4,9 @@
     <div class="row">
       <div class="col-6 pl-4">
         Inloggad som 
-        <b>
+        <h4>
           {{ signalrService.userData?.name }}
-        </b> 
+        </h4> 
       </div>
       <div class="col-6 text-right" style="cursor: pointer;" (click)="logOut()">
             <button class="btn-close-white" > Logga Ut </button>
@@ -22,7 +22,7 @@
     <div class="col-12 col-sm-3 offset-sm-3 mt-4">
       <label><b>Användare Online</b></label>
       <ul class="list-group" *ngFor="let user of users">
-        <li class="list-group-item" style="cursor: pointer;" 
+        <li class="list-group-item list-group-item-success" style="cursor: pointer;" 
         (click)="messageRecipient = user">{{ user.name }}</li>
       </ul>
     </div>
